--- a/css/carousel.css
+++ b/css/carousel.css
@@ -199,15 +199,16 @@
 }
 .carousel-caption {
   position: absolute;
-  right: 15%;
-  bottom: 20px;
-  left: 15%;
+  right: 0;
+  bottom: 0px;
+  left: 0;
   z-index: 10;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+  background-color: rgba(0,0,0,0.3);
 }
 .carousel-caption .btn {
   text-shadow: none;
@@ -231,12 +232,12 @@
     margin-right: -15px;
   }
   .carousel-caption {
-    right: 20%;
-    left: 20%;
+    /*right: 20%;*/
+    /*left: 20%;*/
     padding-bottom: 30px;
   }
   .carousel-indicators {
-    bottom: 20px;
+    bottom: 0px;
   }
 }
 /**
