--- a/css/carousel.css
+++ b/css/carousel.css
@@ -203,8 +203,7 @@
   bottom: 0px;
   left: 0;
   z-index: 10;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 10px;
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
